fix align center

--- a/style.css
+++ b/style.css
@@ -273,7 +273,7 @@ section {
     transform: scale(1.03);
 }
 
-.services-info {
+.service-info {
     display: flex;
     flex-direction: column;
     text-align: center;
